--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "wx-request-v2",
-  "version": "1.0.0",
-  "description": "",
+  "name": "@clevok/request",
+  "version": "0.1.0",
+  "description": "请求",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,7 +13,6 @@
   },
   "dependencies": {
     "@clevok/compose": "0.0.1",
-    "@clevok/task-queue": "0.0.1",
-    "koa-compose": "^4.1.0"
+    "@clevok/task-queue": "0.0.1"
   }
 }
